--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,30 @@
 asn1crypto==0.24.0
+backcall==0.1.0
 cffi==1.11.5
 cryptography==2.3.1
+decorator==4.3.0
 Django==2.1.1
+django-cors-headers==2.4.0
 django-crontab==0.7.1
 django-redis==4.9.0
 idna==2.7
+ipython==6.5.0
+ipython-genutils==0.2.0
+jedi==0.12.1
+netifaces==0.10.7
+parso==0.3.1
+pexpect==4.6.0
+pickleshare==0.7.4
+prompt-toolkit==1.0.15
 psutil==5.4.7
-pycparser==2.18
+ptyprocess==0.6.0
+pycparser==2.19
+Pygments==2.2.0
+PyJWT==1.6.4
 PyMySQL==0.9.2
 pytz==2018.5
 redis==2.10.6
+simplegeneric==0.8.1
 six==1.11.0
+traitlets==4.3.2
+wcwidth==0.1.7
