--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asn1crypto==0.24.0
 backcall==0.1.0
+bcrypt==3.1.4
 cffi==1.11.5
 cryptography==2.3.1
 decorator==4.3.0
@@ -12,19 +13,24 @@ ipython==6.5.0
 ipython-genutils==0.2.0
 jedi==0.12.1
 netifaces==0.10.7
+paramiko==2.4.2
 parso==0.3.1
 pexpect==4.6.0
 pickleshare==0.7.4
 prompt-toolkit==1.0.15
 psutil==5.4.7
 ptyprocess==0.6.0
+pyasn1==0.4.4
 pycparser==2.19
 Pygments==2.2.0
 PyJWT==1.6.4
 PyMySQL==0.9.2
+PyNaCl==1.2.1
 pytz==2018.5
 redis==2.10.6
 simplegeneric==0.8.1
 six==1.11.0
+tornado==5.1.1
 traitlets==4.3.2
 wcwidth==0.1.7
+webssh==0.5.0
