--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ bcrypt==3.1.4
 cffi==1.11.5
 cryptography==2.3.1
 decorator==4.3.0
-Django==2.1.1
+django>=2.1.6
 django-cors-headers==2.4.0
 django-crontab==0.7.1
 django-redis==4.9.0
